src/test/deca/context/invalid/created/decl_var/decl_bool_eq_float.deca
// Description :
//    test affectation incorrect bool = float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: Types incompatibles pour l’affectation

{
bool a = 0.5; 
//0.5 n'est pas un bool
}